--- a/task_2.ipynb
+++ b/task_2.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNjjYYIbDtpNWDYxfSD2LLr",
+      "authorship_tag": "ABX9TyMi0zdPy4fNbI1/8T3veIJJ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -150,6 +150,81 @@
         "print(classification_report(y_test, y_pred_supervised))\n",
         "print(\"ROC AUC Score:\", roc_auc_score(y_test, y_proba_supervised))\n",
         "print(\"Confusion Matrix:\\n\", confusion_matrix(y_test, y_pred_supervised))\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Import necessary libraries\n",
+        "import cv2\n",
+        "import numpy as np\n",
+        "from sklearn.model_selection import train_test_split\n",
+        "from sklearn.ensemble import RandomForestClassifier\n",
+        "\n",
+        "# Step 1: Load and preprocess the fingerprint image\n",
+        "def preprocess_fingerprint(image_path):\n",
+        "    # Read the image\n",
+        "    image = cv2.imread(image_path, cv2.IMREAD_GRAYSCALE)\n",
+        "\n",
+        "    # Apply GaussianBlur to reduce noise\n",
+        "    blurred = cv2.GaussianBlur(image, (5,5),0)\n",
+        "\n",
+        "    # Apply thresholding to binarize the image\n",
+        "    _, binary = cv2.threshold(blurred, 127, 255, cv2.THRESH_BINARY)\n",
+        "\n",
+        "    # Invert the image to get ridges as white and valleys as black\n",
+        "    inverted = cv2.bitwise_not(binary)\n",
+        "\n",
+        "    return inverted\n",
+        "\n",
+        "# Example usage\n",
+        "image_path = '/content/fingerprint_image.jpg' # Ensure this is the correct path to your image file\n",
+        "preprocessed_image = preprocess_fingerprint(image_path)\n",
+        "\n",
+        "# Step 2: Feature extraction (this is a placeholder for actual feature extraction logic)\n",
+        "def extract_features(image):\n",
+        "    # Placeholder for actual feature extraction logic\n",
+        "    # You would typically extract fingerprint minutiae points or other features\n",
+        "    return np.random.rand(100)\n",
+        "\n",
+        "features = extract_features(preprocessed_image)\n",
+        "\n",
+        "# Step 3: Load your dataset and labels (this is a placeholder)\n",
+        "# In practice, you need a well-labeled dataset of fingerprint images and their corresponding blood groups\n",
+        "X = np.array([features for _ in range(100)])  # Placeholder for feature vectors\n",
+        "y = np.random.choice(['A', 'B', 'AB', 'O'], 100)  # Placeholder for blood group labels\n",
+        "\n",
+        "# Step 4: Train a machine learning model\n",
+        "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.2, random_state=42)\n",
+        "classifier = RandomForestClassifier(n_estimators=100)\n",
+        "classifier.fit(X_train, y_train)\n",
+        "\n",
+        "# Evaluate the model\n",
+        "accuracy = classifier.score(X_test, y_test)\n",
+        "print(f'Accuracy: {accuracy * 100:.2f}%')\n",
+        "\n",
+        "# Predict blood group from a new fingerprint image\n",
+        "new_features = extract_features(preprocessed_image)\n",
+        "predicted_blood_group = classifier.predict([new_features])\n",
+        "print(f'Predicted Blood Group: {predicted_blood_group[0]}')\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lYBxFRzzmdaj",
+        "outputId": "e0a4d9e9-bdff-4001-fce9-2bee27a81f64"
+      },
+      "execution_count": 15,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Accuracy: 40.00%\n",
+            "Predicted Blood Group: B\n"
+          ]
+        }
       ]
     }
   ]
